[project]
name = "hello-agents"
version = "2026.7.0"
description = "Agent concepts playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "any-llm-sdk[all]>=1.19.0",
  "google-search-results>=2.4.2",
  "langchain>=1.3.11",
  "langchain-community>=0.4.2",
  "langchain-openai>=1.3.3",
  "langgraph>=1.2.7",
  "litellm>=1.90.2",
  "nest-asyncio>=1.6.0",
  "pydantic>=2.13.4",
  "republic>=0.5.8",
  "smolagents[toolkit]>=1.26.0",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.20",
  "ty>=0.0.56",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ulib"]

[tool.pyrefly]
project-includes = [
  "**/*.py",
  "**/*.ipynb",
]

[tool.uv]
python-preference = "managed"
prerelease = "if-necessary-or-explicit"
resolution = "highest"
